--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,6 +30,6 @@
         </form>
         <div id="message-box"></div>
     </div>
-    <script src="/src/app.js"></script>
+    <script src="../frontend/src/app.js"></script>
 </body>
 </html>
