--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Gateway</title>
-    <link rel="stylesheet" href="./src/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
@@ -30,6 +30,6 @@
         </form>
         <div id="message-box"></div>
     </div>
-    <script src="./src/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
